# stream-media

./: .containerignore  .gitignore  Cargo.toml  Containerfile  README.md  compose.yaml  demo.ipynb  deploy.sh  setup.sh
api/: bruno.json
api/DASH/: Init Segment.bru  Manifest.bru  Media Chunk.bru
api/HLS/: Master Playlist.bru  Segment.bru  Variant Playlist.bru
api/Media/: Create Media.bru  Create Video Media.bru  Delete Media.bru  Get Media.bru  List Media by Type.bru  List Media.bru  Register SMB Media.bru  Search Media.bru  Update Media.bru
api/SMB Sources/: Create SMB Source.bru  Delete SMB Source.bru  Get SMB Source.bru  List SMB Sources.bru  Mount SMB Source.bru  Unmount SMB Source.bru  Update SMB Source.bru
api/Stream/: Stream Full File.bru  Stream from Offset.bru  Stream with Range.bru
api/Transcode/: Transcode Status.bru  Trigger Transcode.bru
api/Upload/: Upload Audio File.bru  Upload FLAC File.bru  Upload Video File.bru
api/Users/: Change Password.bru  Confirm Password Reset.bru  Create User.bru  Delete User.bru  Get User.bru  List Users.bru  Request Password Reset.bru  Search Users.bru  Update User.bru
catalog-service/: Cargo.toml
catalog-service/src/: db.rs  handlers.rs  main.rs  routes.rs
common/: Cargo.toml
common/src/: config.rs  error.rs  models.rs
gateway/: Cargo.toml
gateway/src/: main.rs  proxy.rs  routes.rs
streaming-service/: Cargo.toml
streaming-service/src/: handlers.rs  main.rs  range.rs  routes.rs  transcode.rs
user-service/: Cargo.toml
user-service/src/: db.rs  handlers.rs  main.rs  routes.rs
web/: index.html  package-lock.json  vite.config.ts
web/src/: App.css  api.ts  auth.tsx  index.css  main.tsx
web/src/components/: Layout.tsx  RequireAuth.tsx
web/src/pages/: Home.tsx  Login.tsx  Profile.tsx
