[workspace]
resolver = "2"
members = [
    "common",
    "catalog-service",
    "streaming-service",
    "user-service",
    "gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
common = { path = "common" }
