[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
